--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap'); 
- @import url('https://fonts.googleapis.com/css2?family=Gilda+Display&family=Dr+Sugiyama&display=swap'); 
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600&display=swap'); 
+ @import url('https://fonts.googleapis.com/css2?family=Gilda+Display&family=Dr+Sugiyama&display=swap');  */
 
 /*
    Note: For best performance, it's recommended to move @import statements
@@ -529,4 +529,5 @@ img {
     }
 
 }
+
 
